# innexar-usa

./: .cursorrules  .gitignore  GLOBAL_RULES.md  Makefile  PLANO_EXECUCAO.md  PLANO_WAAS_USA.md  PROJECT_ANALYSIS.md
innexar-workspace/backend/: .dockerignore  .env.example  BACKEND_ANALYSIS.md  Dockerfile  Makefile  TENANT_ISOLATION_REPORT.md  pyproject.toml  requirements.txt  test.db
innexar-workspace/backend/alembic/: env.py
innexar-workspace/backend/alembic/versions/: 5d8e42c68fc6_add_billing_tables.py  a1b2c3d4e5f6_add_crm_projects_support_tables.py  a7b8c9d0e1f2_add_customer_phone_address.py  a8b9c0d1e2f3_mp_subscription_external_id_and_checkouts.py  b2c3d4e5f6a7_add_integration_configs.py  b8c9d0e1f2a3_add_customer_password_reset_tokens.py  b9c0d1e2f3a4_add_mp_customer_id.py  c0d1e2f3a4b5_project_subscription_expected_delivery.py  c3d4e5f6a7b8_add_notifications.py  c7079727f866_add_requires_password_change_flag.py  c9d0e1f2a3b4_add_provisioning_jobs.py  d0e1f2a3b4c5_add_staff_password_reset_tokens.py  d1e2f3a4b5c6_project_files.py  d4e5f6a7b8c9_add_rbac_tables.py  e1f2a3b4c5d6_add_project_requests.py  e2f3a4b5c6d7_ticket_category_project_id.py  e5f6a7b8c9d0_add_provisioning_hestia.py  f2a3b4c5d6e1_add_project_request_meta.py  f3a4b5c6d7e8_project_request_project_id.py  f6a7b8c9d0e1_add_subscription_next_due_date.py  g4b5c6d7e8f9_invoice_reminder_sent_at.py  h5c6d7e8f9a0_add_projects_delivery_info.py  (+1 more)
innexar-workspace/backend/app/: main.py
innexar-workspace/backend/docs/: API.md  FLUXO_WEBSITE_CHECKOUT_PORTAL_WORKSPACE.md  INTEGRATION_PROVIDERS.md  PLANO_HOSPEDAGEM_MERCADOPAGO_PORTAL.md  SETUP.md
innexar-workspace/backend/scripts/: create_project_manual.py  delete_test_customers.py  seed_customer_instituto_toufic.py  seed_customer_toufic_hestia.py  seed_hestia_integration.py  seed_product_static_hosting.py  seed_products_catalog.py  seed_products_site_venda.py  seed_products_usa_waas.py  send_credentials_manual.py  show_hestia_url.py  test_hestia_manual.py  test_stripe_key.py  update_hestia_base_url.py  update_hestia_credentials.py
innexar-workspace/backend/tests/: __init__.py  conftest.py  storage_fake.py
(+471 files in other folders)
